# SEAgent

./: .env.example  .gitignore  .vercelignore  AGENTS_DOCUMENTATION.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  DEEPSEEK_MIGRATION.md  Dockerfile  EVALUATION_SCORING.md  GITHUB_CICD_INTEGRATION_GUIDE.md  GITHUB_FRONTEND_INTEGRATION.md  PROJECT_DOCUMENTATION.txt  PROJECT_STRUCTURE.md  README.md  SECURITY.md  SECURITY_SETUP_COMPLETE.md  SETUP.md  TESTING_CICD.md  VERCEL_DEPLOYMENT.md  demo_integration.py  docker-compose.yml  final_cicd_test.py  main.py  main_simple.py  pyproject.toml  quick_check_cicd.py  requirements-vercel.txt  requirements.txt  simple_test.py  standalone_demo.py  test_cicd_integration.py  test_integration.py  test_prompt_to_app.py  vercel.json  verify_cicd_simple.py
.github/: copilot-instructions.md
agents/: __init__.py  application_generator_agent.py  base_agent.py  cicd_agent.py  code_generation_agent.py  debug_agent.py  evaluation_engine.py  integration_agent.py  performance_agent.py  security_analysis_agent.py  testing_agent.py
api/: __init__.py  app.py  server.py
config/: __init__.py  config.example.yaml  config.yaml  deepseek_client.py  settings_simple.py
datasets/: humaneval.json  securityeval.json
docs/: CLEANUP_SUMMARY.md  GITHUB_SETUP.md  REALTIME_GENERATION.md  WEB_APP_DOCUMENTATION.md
examples/: cicd_demo.py
integrations/: __init__.py  application_launcher.py  cicd_intelligence.py  github_integration.py
orchestrator/: __init__.py  agent_coordinator.py  dashboard_manager.py
tests/: test_cicd_agent.py
ui/: prompt_to_app.html  (+2 more)
(+2 files in other folders)
